test/conformance/chainsaw/generate/validation/clusterpolicy/cloneList/policy-pass.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: target-scope-validation-pass-1
spec:
  rules:
  - name: clone-multiple-basic-create-policy-rule
    match:
      any:
      - resources:
          kinds:
          - Namespace
    generate:
      namespace: "{{request.object.metadata.name}}"
      synchronize: true
      cloneList:
        namespace: default
        kinds:
          - v1/Secret
        selector:
          matchLabels:
            allowedToBeCloned: "true"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: target-scope-validation-pass-2
spec:
  rules:
  - name: clone-multiple-basic-create-policy-rule
    match:
      any:
      - resources:
          kinds:
          - Namespace
    generate:
      namespace: "{{request.object.metadata.name}}"
      synchronize: true
      cloneList:
        kinds:
          - rbac.authorization.k8s.io/v1/ClusterRole
        selector:
          matchLabels:
            allowedToBeCloned: "true"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: target-scope-validation-pass-3
spec:
  rules:
  - name: sync-secret
    match:
      any:
      - resources:
          kinds:
          - Namespace
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - default
          - kube-public
          - kyverno
    generate:
      generateExisting: false
      namespace: "{{request.object.metadata.name}}"
      synchronize : true
      cloneList:
        namespace: default
        kinds:
          - v1/Secret
          - v1/ConfigMap
        selector:
          matchLabels:
            allowedToBeCloned: "true"
