test/conformance/chainsaw/generate/validation/clusterpolicy/cloneList/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: clonelist
spec:
  concurrent: true
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
  - name: step-02
    try:
    - apply:
        file: policy-pass.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-fail-1.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-fail-2.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-fail-3.yaml
